@@ -733,8 +733,10 @@ int __pascal far process_key() {
 				}
 			break;
 			case SDL_SCANCODE_K: // K --> kill guard cheat
-				guardhp_delta = -guardhp_curr;
-				Guard.alive = 0;
+				if (Opp.charid != charid_4_skeleton) {
+					guardhp_delta = -guardhp_curr;
+					Guard.alive = 0;
+				}
 			break;
 			case SDL_SCANCODE_I | WITH_SHIFT: // shift+I --> invert cheat
 				toggle_upside();
